<resources>
    <string name="app_name">LLN Campus</string>
    <string name="main_menu">Main menu</string>
    <string name="loading">Loading…</string>
    <string name="connection_required">You must be connected to the Internet</string>
    <string name="begins_in">begins in</string>
    <string name="minutes">minutes</string>
    <string name="notification_stop">The course notification service has been stopped</string>
    <string name="settings">Settings</string>
    <string name="reset_DB">Reset</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="reloaded_db">The application is reset.</string>
    <string name="confirm_reset_DB">Are you sure to reset the application </string>
    <string name="todo">Work in progress, will probably be implemented in the next version :)</string>
    <string name="error_db">Error DB</string>
	<string name="no_pdf_reader">No PDF viewer installed: attempting to connect by the Internet…</string>
    <string name="menu_settings">Settings</string>
	<string name="icampus">iCampus</string>
	<string name="moodle">Moodle</string>
	<string name="office">Bureau UCL</string>
	<string name="logo">Logo</string>
	<string name="leisure">Leisures</string>
	<string name="cinema">Cinema schedule</string>
    <string name="sports">Sport schedule</string>
    <string name="sablon">Le Sablon</string>
    <string name="galilee">Le Galilée</string>
    <string name="dun_pain_a_lautre">D\'un pain à l\'autre</string>
    <string name="solidarity">Solidaire card</string>
    <string name="culture">Culture card</string>
    <string name="carpestudentem">Agenda of the animation</string>
    <string name="schedule">Schedule</string>
	<string name="auditoriums">Auditoriums</string>
	<string name="libraries">Libraries</string>
    <string name="auditorium_address_selected">Address :</string>
    <string name="auditorium_address">Please select an auditorium from the list</string>
    <string name="subauditorium_address">Please select an subauditorium from the list</string>
    <string name="library_address">Please select a library from the list</string>
    <string name="library_name">Library name</string>
    <string name="gps">Guidance GPS</string>
    <string name="sub_auditorium">Subauditoriums</string>
    <string name="building_picture_description">Overview of building entrance</string>
    <string name="access_description">Show if the place is accessible for disabled person</string>
    <string name="more_details">"more details"</string>
    <string name="auditorium_name_description">Auditorium name</string>
    <string name="auditorium_address_description">Auditorium address</string>
    <string name="opening_status_description">Opening status</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nbplaces">Number of places:</string>
    <string name="furniture">Furnitures:</string>
    <string name="cabin">Cabine:</string>
    <string name="screen">Screen:</string>
    <string name="sound">Sono:</string>
    <string name="retro">Retroprojector:</string>
    <string name="slide">Dia:</string>
    <string name="video">Video:</string>
    <string name="network">Network:</string>
    <string name="table">Table</string>
    <string name="fixed_table">Fixed table</string>
    <string name="bench">Bench</string>
    <string name="nothing">Nothing</string>
    <string name="video_projector">Video projector</string>
    <string name="video_projector_data">Video projector data</string>
    <string name="monitor_data">Monitor data</string>
    <string name="television">Television</string>
    <string name="subauditorium_picture_description">Picture of the subauditorium</string>
    <string name="subauditorium_picture_message">Waiting for Internet connectivity#8230</string>
	<string name="about">About</string>
    <string name="about_text">This application was developed by Benjamin Baugnies, Quentin De Coninck, Pham Anh Tuan Le and Damien Mercier for the course LFSAB1509 Computing Project (2012&#8211;2013) given at the Université Catholique de Louvain&#8211;la&#8211;Neuve by Professor Yves Deville. This application is distributed under the GPL3 license. Version </string>
	<string name="source_code">The source code is available at https://github.com/qdeconinck/lln-campus</string>
    <string name="map">Map</string>
    <string name="ade_update">Update from ADE</string>
    <string name="login_ucl">Global identifier UCL</string>
    <string name="password">Password</string>
    <string name="course_list_edit">Edit the course list</string>
    <string name="update_from_uclouvain">Download from UCLouvain</string>
    <string name="annee_acad">Academic Year</string>
    <string name="course_add">Add a course</string>
    <string name="course_code">Course code</string>
    <string name="course_name">Course name</string>
    <string name="course_list_explanation">"In order to have your schedule, you have to indicate the different course codes which you take (the code courses have to match with on ADE ones). In order to make the task easier, the application can download the course list from uclouvain.be. To do that, click on \"Download from UCLouvain\". To delete a course of the list, click on it. "</string>
    <string name="empty_course_list_dialog_title">First step with the schedule</string>
    <string name="empty_course_list_dialog_text">There is still not any course downloaded for your schedule yet. In order to have your schedule, you have to indicate the different course codes which you take. To do that, it is possible to download automatically your course list from the UCL website. It is also possible to add manually if your course codes of your virtual office do not match with ADE ones.</string>
    <string name="download_for">Download for</string>
    <string name="download_error">Download Error</string>
	<string name="events">Events</string>
	<string name="download_done">Download finished</string>
	<string name="nb_error">Number of errors</string>
	<string name="download_from_ADE">Download the schedule from ADE</string>
	<string name="download_progress">Download in progress…</string>
    <string name="last_name">Name</string>
	<string name="first_name">First name</string>
	<string name="entity">Entity</string>
	<string name="acronym">(sigle or acronym)</string>
	<string name="directories">Repertory (UCL staff)</string>
	<string name="login_info">Login information</string>
	<string name="summary_login_username">"Please enter your login username"</string>
	<string name="login_username">UCL username</string>
	<string name="summary_login_password">Please enter your password</string>
	<string name="login_password">Password</string>
	<string name="settings_notify">Course notifications</string>
	<string name="summary_settings_notify">Enable alert of imminent courses</string>
	<string name="notify_ringtone">Notification ringtone</string>
	<string name="notify_minute">Number of minutes</string>
	<string name="notify_minute_summary">The notification will appear the specified number of minutes before your course.</string>
	<string name="first_use">"Initialization of the application for the first use. Please wait…"</string>
	<string name="update_app">"Updating the application. Please wait…"</string>
	<string name="loading_app">"Loading the application. Please wait…"</string>
	<string name="no_google_maps">Please install Google Maps in order to have this functionnality.</string>
	<string name="username_notify">"To use this fonctionnality, you must first define your UCL username and password in the application's settings"</string>
	<string name="connection">Connection #8230</string>
	<string name="connection_ucl">"Connection to UCLouvain.be"</string>
	<string name="fetch_info">"Retrieving information about the course attended"</string>
	<string name="error_academic_year">"Unable to retrieve your studies for the academic year"</string>
	<string name="get_courses">"Retrieving the list of courses for "</string>
	<string name="courses_empty">"Aucun cours n'a été trouvé."</string>
	<string name="cleaning_db">"Cleaning the database  "</string>
	<string name="add_courses_db">"Addition of new courses in the database"</string>
	<string name="end">End</string>
	<string name="courses_download_ok">"List of courses successfully downloaded."</string>
	<string name="add_course_ok">"Course successfully added"</string>
	<string name="add_course_error">"Failed to add the course"</string>
	<string name="delete_course">"Deleting a course"</string>
	<string name="confirm_delete_course">"Are you sure you want to delete the course "</string>
	<string name="delete_course_ok">"Course deleted!"</string>
	<string name="delete_course_error">"Failed to delete :/"</string>
	<string name="delete">Delete</string>
	<string name="delete_event_dialog_title">Deleting an event</string>
	<string name="delete_event_dialog_text">"Do you want to delete this event only (punctual deleting) or weekly? (You can come back without deleting in pressing the return button)"</string>
	<string name="delete_event_one">This one</string>
	<string name="delete_event_weekly">Weekly</string>
	<string name="error">Error</string>
	<string name="information">"Information"</string>
	<string name="course">Course</string>
	<string name="trainees">Students</string>
	<string name="trainers">Teachers</string>
	<string name="room">Room</string>
	<string name="activity_name">Activity name</string>
	<string name="title">Title</string>
	<string name="settings_notify_gps_summary">Adjust the number of minutes depending onn your position</string>
	<string name="button_solidarity_advantages">Advantages</string>
	<string name="button_solidarity_website">Join us !</string>
	<string name="solidarity_text_1"><b>La carte solidaire, c\'est quoi?</b></string>
	<string name="solidarity_text_2">Avec la Carte Solidaire tu t\'engages pour le développement et pour l\'environnement.</string>
	<string name="solidarity_text_3">La moitié du prix de la Carte permet d\'aider une maman à nourrir ses enfants au Burundi</string>
	<string name="solidarity_text_4">L\'autre moitié te permet de financer tes propres projets solidaires grâce au Fonds Carte Solidaire.</string>
	<string name="solidarity_text_5">La Carte Solidaire c\'est aussi des <b>réductions</b> dans des magasins bios, naturels et fairtrade sur ton campus et <b>plein d’autres avantages!</b></string>
	<string name="solidarity_text_6">La Carte ne coûte que <b>10 euros</b></string>
	<string name="solidarity_text_7">Alors qu’est-ce que tu attends ? Rejoins-nous sur www.cartesolidaire.be </string>
	<string name="solidarity_advantages_text_1">Des réductions exclusives</string>
	<string name="solidarity_advantages_text_2">Des réductions chez tous les commerçants partenaires de la Carte Solidaire. Retrouve la liste complète sur www.cartesolidaire.be </string>
	<string name="solidarity_advantages_text_3">Tes projets</string>
	<string name="solidarity_advantages_text_4">Tu es solidaire, tu veux t\'engager mais tu n\'as pas les moyens financiers? Le Fonds \"Carte Solidaire\" te permettra de financer TES propres projets au Nord comme au Sud !</string>
	<string name="solidarity_advantages_text_5">De l\'info !</string>
	<string name="solidarity_advantages_text_6">La Carte Solidaire c\'est aussi une newsletter qui t\'informe tous les mois sur l\'actualité solidaire de ton campus mais aussi plein de promos et des concours.</string>
	<string name="solidarity_advantages_text_7">Vis ta propre expérience</string>
	<string name="solidarity_advantages_text_8">Un accès privilégié pour tes stages, mémoires en Belgique et à l\'étranger, sur les projets de Louvain Coopération.</string>
</resources>