<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/ade_update"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/ade_update"
        android:visible="false"/>
     <item
        android:id="@+id/course_list_edit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/course_list_edit"
        android:visible="false"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
   
 <item
        android:id="@+id/menu_reset_database"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/reset_DB"/> 
 
  <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>
</menu>