<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/solidarity_text_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:textIsSelectable="false"
        android:text="@string/solidarity_text_1"
        android:textSize="20sp"/>
     <TextView
        android:id="@+id/solidarity_text_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:textIsSelectable="false"
        android:text="@string/solidarity_text_2"
        android:textSize="14sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>
      <TextView
        android:id="@+id/solidarity_text_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:textIsSelectable="false"
        android:text="@string/solidarity_text_3"
        android:textSize="12sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>
       <TextView
        android:id="@+id/solidarity_text_4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:textIsSelectable="false"
        android:text="@string/solidarity_text_4"
        android:textSize="12sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>
        <TextView
        android:id="@+id/solidarity_text_5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:textIsSelectable="false"
        android:text="@string/solidarity_text_5"
        android:textSize="14sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>
        <TextView
        android:id="@+id/solidarity_text_6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:textIsSelectable="false"
        android:text="@string/solidarity_text_6"
        android:textSize="14sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>
        <TextView
        android:id="@+id/solidarity_text_7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:textIsSelectable="false"
        android:text="@string/solidarity_text_7"
        android:textSize="14sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>
    
    <LinearLayout
        style="android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal" >

        	<Button
        	    style="@android:attr/buttonBarButtonStyle"
            	android:id="@+id/button_solidarity_advantages"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:gravity="center"
            	android:text="@string/button_solidarity_advantages" />

        	<Button
           	    style="@android:attr/buttonBarButtonStyle"     	    
            	android:id="@+id/button_solidarity_website"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:gravity="center"
            	android:text="@string/button_solidarity_website" />
        
    </LinearLayout>
    <ImageView
        android:id="@+id/solidarity_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:contentDescription="@string/solidarity"
        android:src="@drawable/carte_solidaire"/>

</LinearLayout>