
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="5dip" >
    
    <TextView
        android:id="@+id/subauditorium_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:textIsSelectable="true"
        android:text="@string/subauditorium_address"
        android:textSize="20sp" />
        
    <TableLayout
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:stretchColumns="1">
    
						
    
    <ImageView
        android:id="@+id/access_picture"
        android:layout_width="match_parent"
        android:src="@drawable/logo_handicap"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:contentDescription="@string/access_description"
        android:visibility="invisible"
        android:layout_gravity="right"
        android:textSize="12sp" />
    
   
    </TableLayout>
    
	<LinearLayout
		style="android:attr/buttonBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:orientation="horizontal" >
    
    <TableLayout
    android:layout_marginTop="6dp"
    android:layout_width="0dp"
    android:layout_gravity="center_horizontal" 
    android:layout_height="wrap_content" 
    android:layout_weight="1"
    android:stretchColumns="1">
    
    	<TableRow
			android:orientation="horizontal"
			android:layout_height="10dip"
			android:layout_width="wrap_content" 
			android:gravity="center_horizontal">
						
    
		    <TextView android:id="@+id/nbplaces"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="top|center_horizontal"
		        android:textIsSelectable="true"
		        android:text="@string/nbplaces"
		        android:textSize="12sp" />
		    
		     <TextView android:id="@+id/nbplaces_value"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="top|center_horizontal"
		        android:textIsSelectable="true"
		        android:textSize="12sp" />
    </TableRow>
    
    <TableRow>
	
        <TextView android:id="@+id/network"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:textIsSelectable="true"
        android:text="@string/network"
        android:textSize="12sp" />
        
        <TextView android:id="@+id/network_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:textIsSelectable="true"
        android:textSize="12sp" />
          
    </TableRow>
    
    <TableRow>
        
        <TextView android:id="@+id/screen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:textIsSelectable="true"
        android:text="@string/screen"
        android:textSize="12sp" />
        
         <TextView android:id="@+id/screen_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:textIsSelectable="true"
        android:textSize="12sp" />
      
    </TableRow>
    
    <TableRow>
        
        <TextView android:id="@+id/retro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:textIsSelectable="true"
        android:text="@string/retro"
        android:textSize="12sp" />
        
         <TextView android:id="@+id/retro_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:textIsSelectable="true"
        android:textSize="12sp" />
      
    </TableRow>
    
    
    <TableRow>
        
        <TextView android:id="@+id/slide"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:textIsSelectable="true"
        android:text="@string/slide"
        android:textSize="12sp" />
        
         <TextView android:id="@+id/slide_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:textIsSelectable="true"
        android:textSize="12sp" />
      
    </TableRow>
    
    <TableRow>
        
        <TextView android:id="@+id/video"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:textIsSelectable="true"
        android:text="@string/video"
        android:textSize="12sp" />
        
         <TextView android:id="@+id/video_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:textIsSelectable="true"
        android:textSize="12sp" />
      
    </TableRow>
    
    <TableRow>
        
        <TextView android:id="@+id/sound"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:textIsSelectable="true"
        android:text="@string/sound"
        android:textSize="12sp" />
        
         <TextView android:id="@+id/sound_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
                android:textIsSelectable="true"
        android:textSize="12sp" />
      
    </TableRow>
    
    <TableRow>
        
        <TextView android:id="@+id/cabin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:textIsSelectable="true"
        android:text="@string/cabin"
        android:textSize="12sp" />
        
         <TextView android:id="@+id/cabin_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:textIsSelectable="true"
        android:textSize="12sp" />
      
    </TableRow>
    
    <TableRow>
        
        <TextView android:id="@+id/furniture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:textIsSelectable="true"
        android:text="@string/furniture"
        android:textSize="12sp" />
        
         <TextView android:id="@+id/furniture_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:textIsSelectable="true"
        android:textSize="12sp" />
      
    </TableRow>
    
    
    </TableLayout>
  
	</LinearLayout>
 	
    <ImageView
        android:id="@+id/subauditorium_picture"
        android:layout_width="fill_parent"
        android:layout_marginTop="3dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:contentDescription="@string/subauditorium_picture_description"
        android:visibility="visible"
        android:layout_gravity="right"
        android:text="@string/subauditorium_picture_message"
        android:textSize="12sp" />
    
    
     
</LinearLayout>
